--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Icon -->
       <div class="fadeIn first">
         <img src="public/img/Ssccdmx.png" id="icon" alt="User Icon" />
-        <h1>SSC</h1>
+        <h1>CSC</h1>
       </div>
 
       <!-- Login Form -->
